--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="failed_connection">%1$s->%2$s: FAILED connection to %3$s: %4$s (app %5$d)</string>
     <string name="failed_connection_closed">%1$s->%2$s: FAILED: %3$s</string>
     <string name="closed_connection">%1$s->%2$s: closed connection</string>
-    <string name="reload_all_circuits">Reload all circuits?</string>
+    <string name="refresh_all_circuits">Refresh all circuits?</string>
     <string name="reload_all_circuits_description">New circuits will be established for all of your apps. Some apps and websites might not recognize you as a result, and could log you out of their services.</string>
     <string name="reload_app_circuits">Refresh this circuit?</string>
     <string name="reload_app_circuits_description">New circuits will be established for this app only. Some apps and websites might not recognize you as a result, and could log you out of their services.</string>
