--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,7 +176,12 @@
     <string name="change">Change</string>
     <string name="this_device">This device</string>
     <string name="obfs4_bridge">obfs4 bridge</string>
-
+    <string name="about">About</string>
+    <string name="about_description">Find out more about Tor VPN</string>
+    <string name="version">Version</string>
+    <string name="last_updated">Last updated</string>
+    <string name="about_description_long">Tor VPN is an experimental VPN app made by the %1$s, developers of Tor and Tor Browser—the world’s strongest tools for privacy and freedom online.</string>
+    <string name="tor_project">Tor Project</string>
     <plurals name="n_bridges">
         <item quantity="one">%1$s bridge added</item>
         <item quantity="many">%1$s bridges added</item>
