chore: update content description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,5 +189,8 @@
         <item quantity="other">%1$s bridges added</item>
     </plurals>
 
+    <!-- Content Description -->
+    <string name="up_content_description">Upload</string>"
+    <string name="down_content_description">Download</string>"
 
 </resources>
