--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="app_routing_browsers">Browsers</string>
     <string name="app_routing_other_apps">Other apps</string>
     <string name="app_routing_system_apps">System apps</string>
+    <string name="app_routing_show_apps">Show %1$s apps</string>
+    <string name="app_routing_hide_apps">Hide %1$s apps</string>
 
     <string name="notification_channel_description">Shows updates about TorVPN.</string>
     <string name="notification_channel_name">TorVPN notifications</string>
