--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,26 +126,26 @@
     <!-- content description for bridge settings image button in connection screen -->
     <string name="bridge_settings">Bridge settings</string>
     <string name="bridges">Bridges</string>
-    <string name="built_in_bridges">Choose a built-in bridge</string>
+    <string name="built_in_bridges">Your bridges</string>
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="snowflake">Snowflake</string>
     <string name="obfs4_built_in">obfs4 (built-in)</string>
     <string name="snowflake_built_in">Snowflake (built-in)</string>
     <string name="none">None</string>
-    <string name="obfs4_description">Makes your traffic look like random data</string>
-    <string name="snowflake_description">Routes your connection through Snowflake proxies to make it look like you\'re placing a video call</string>
+    <string name="obfs4_description">Disguises your traffic as random data</string>
+    <string name="snowflake_description">Disguises your traffic as a video call</string>
     <string name="add_new_bridge">Add new bridges</string>
     <string name="bridge_address">Enter bridge address</string>
-    <string name="bridge_address_description">Add one or more bridges provided by a trusted person or organization.</string>
+    <string name="bridge_address_description">Paste bridge addresses you already know</string>
     <string name="bridge_addresses">Bridge addresses</string>
     <string name="action_paste_bridges">Paste your bridge addresses here</string>
     <string name="manual_bridge">Manual selection</string>
-    <string name="get_new_bridges">Get new bridges</string>
+    <string name="get_new_bridges">Find more bridges</string>
     <string name="new_bridges">I need new bridges</string>
     <string name="fetching_bridges">Fetching your new bridges…</string>
     <string name="new_bridges_result">Here are your new bridges:</string>
     <string name="get_new_bridges_description">Since bridge addresses aren\'t public, you\'ll need to request one from the Tor Project.</string>
-    <string name="ask_bridge_bot">Ask the bridge bot</string>
+    <string name="ask_bridge_bot">Request bridges</string>
     <string name="telegram">Telegram</string>
     <string name="signal">Signal</string>
     <string name="whatsapp">Whatsapp</string>
